# tajik-nlp

./: .gitignore  README.md  Tajik_Token_classification_(PyTorch).ipynb  convert_gsm8k_and_upload.py  fine_tune_whisper.ipynb  gsm8k_tajik.py  mmlu_tajik.py  pyproject.toml  test_gsm8k_datasets.py
ASR-demo/: README.md  app.py
ASR-demo-gradio/: README.md
ASR-notebooks/: Fine_Tune_XLSR_Wav2Vec2_on_Tajik_ASR_with_🤗_Transformers.ipynb  Tajik_ASR_with_Whisper_FLEURS.ipynb
ASR-script/: fine_tune_whisper.ipynb
GPT2-scipt/: Gpt2_Tajik.ipynb
GPT2-script/: data_utils.py  requirements.txt
QWEN/: qwen2_5_(7b)_grpo.py
TajBERTo-script/: TajBERTo_trained_on_Leipzig_Corpora.ipynb
datasets/: fix_translations.py  litellm_mmlu_tajik.py  upload_to_hf.py
